[project]
name = "Xiwen"
dynamic = ["version"]
description = "A tool to scan HTML for Chinese characters"
authors = [{ name = "Elliott Steer", email = "essteer@pm.me" }]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "masquer>=1.1.1",
    "polars==0.20.31",
    "requests>=2.32.3",
]
requires-python = ">=3.9"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["Chinese", "web scraping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.7.0",
    "ruff>=0.4.5",
    "tqdm==4.66.2",
]

[project.urls]
documentation = "https://github.com/essteer/xiwen/blob/main/README.md"
repository = "https://github.com/essteer/xiwen"
issues = "https://github.com/essteer/xiwen/issues"
